--- a/api/LibararyAPI/appsettings.json
+++ b/api/LibararyAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=LibraryDB;Integrated Security=true;TrustServerCertificate=true;"
+  }
 }
