--- a/api/LibararyAPI/appsettings.json
+++ b/api/LibararyAPI/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=LibraryDB;Integrated Security=true;TrustServerCertificate=true;"
-  }
+  "AllowedHosts": "*"
 }
